wordpress/2-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-ss
  namespace: wordpress
spec:
  serviceName: mysql-db  
  replicas: 1
  selector:
    matchLabels:
      app: mysql-app
  template:
    metadata:
      name: mysql-pod
      namespace: wordpress
      labels:
        app: mysql-app
    spec:
      containers:
        - name: mysql-container
          image: mariadb:latest
          ports:
            - name: mysql-port
              containerPort: 3306
          volumeMounts:
            - name: mysql-db-vol
              mountPath: /var/lib/mysql
              subPath: mysql
  volumeClaimTemplates:
      - metadata:
          name: mysql-db-vol
        spec:
          accessModes: [ "ReadWriteOnce" ]
          resources:
            requests:
              storage: 10Gi
