wordpress/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: wordpress

# mysql-db.default.svc.cluster.local
spec:
  type: ClusterIP
  # type: NodePort
  # type: LoadBalancer
  selector:
    app: mysql-app
  ports: 
    - protocol: TCP
      port: 3306
      targetPort: mysql-port
