wordpress/5-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress

# wordpress.default.svc.cluster.local:3306
spec:
  # type: ClusterIP
  # type: NodePort
  type: LoadBalancer
  selector:
    app: wordpress-app
  ports: 
    - protocol: TCP
      port: 80
      targetPort: http-port
