wordpress/7-wordpress-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-ingressroute
  namespace: wordpress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.icetechnology.com.ve`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
  tls:
    secretName: wordpress-certificate-secret
